CHANGES

2014-10-04
- Release v1.3.4.0
- Update to elasticsearch 1.3.4 #691

2014-09-22
 - Update the branch alias in composer.json to match the library version #683

2014-09-16
 - Update license in composer.json to match project #681

2014-09-08
 - Delete execution permission from non-executable files #677

2014-08-25
 - Top-level filter parameter in search has been renamed to post_filter #669 #670
 - Deprecated: Elastica\Query::setFilter() is deprecated. Use Elastica\Query::setPostFilter() instead. #669
 - Deprecated: Elastica\Query::setPostFilter() passing filter as array is deprecated. Pass instance of AbstractFilter instead. #669

2014-08-22
 - Fixed escaping of / character in Elastica\Util::escapeTerm(), removed usage of JSON_UNESCAPED_SLASHES in Elastica\JSON #660

2014-08-06
 - Add connection pool and connection strategy

2014-07-26
- Release v1.3.0.0
- Prepare Elastica Release v1.3.0.0

2014-07-25
- Update to elasticsearch version 1.3.0 http://www.elasticsearch.org/downloads/1-3-0/

2014-07-14
 - Add setQuery() method to Elastica\Query\ConstantScore #653

2014-07-12
 - Be able to configure ES host/port via ENV var in test env #652

2014-07-07
 - Fix FunstionScore Query random_score without seed bug. #647

2014-07-02
- Add setPostFilter method to Elastica\Query (http://www.elasticsearch.org/guide/en/elasticsearch/guide/current/_filtering_queries_and_aggregations.html#_post_filter) #645

2014-06-30
- Add Reverse Nested aggregation (http://www.elasticsearch.org/guide/en/elasticsearch/reference/current/search-aggregations-bucket-reverse-nested-aggregation.html). #642

2014-06-14
- Release v1.2.1.0
- Removed the requirement to set arguments filter and/or query in Filtered, according to the documentation: http://www.elasticsearch.org/guide/en/elasticsearch/reference/current/query-dsl-filtered-query.html #616

2014-06-13
- Stop ClientTest->testDeleteIdsIdxStringTypeString from failing 1/3 of the time #634